--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    //dagger
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+    // Dagger Android
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+
 
     //testing
     testImplementation 'junit:junit:4.13-beta-3'
