--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ allprojects {
         retrofit_version = '2.4.0'
         kotlin_version = '1.3.31'
         okhttp_version = '4.0.0-alpha02'
+        dagger_version = '2.17'
+
     }
 }
 
