--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,23 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: "kotlin-kapt"
 
+
+def getProperty(String filename, String propName) {
+    def propsFile = rootProject.file(filename)
+    if (propsFile.exists()) {
+        def props = new Properties()
+        props.load(new FileInputStream(propsFile))
+        if (props[propName] != null) {
+            return props[propName]
+        } else {
+            print("No such property " + propName + " in file " + filename)
+        }
+    } else {
+        print(filename + " does not exist!")
+    }
+}
 
 android {
     compileSdkVersion 28
@@ -16,6 +28,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "TMDB_API_KEY", "\"${getProperty("local.properties", "tmdb_api_key")}\""
+
     }
     buildTypes {
         release {
@@ -29,41 +43,50 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //androidx dependencies
-
     implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version" // RxJava support for Room (ask Kevin about this)
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation "androidx.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
-    implementation "androidx.navigation:navigation-ui:$nav_version" // For Kotlin use navigation-ui-ktx
+    implementation "androidx.room:room-rxjava2:$room_version" // RxJava support for Room
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation "androidx.appcompat:appcompat:$androidx_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutX_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    kapt 'com.android.databinding:compiler:3.1.4'
 
-
-    //3rd party dependencies
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.1'
+    //networking
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.google.code.gson:gson:2.8.5"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
-    //dagger
+    // glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.github.florent37:glidepalette:$glidePaletteVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+
+    //debugging
+    implementation "com.facebook.stetho:stetho:$stethoVersion"
+    implementation "com.facebook.stetho:stetho-okhttp3:$stethoVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+
+
+    // dependency injection
     implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    compileOnly "org.glassfish:javax.annotation:3.1.1"
-    // Dagger Android
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "org.kodein.di:kodein-di-generic-jvm:6.2.1"
 
 
     //testing
-    testImplementation 'junit:junit:4.13-beta-3'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    testImplementation 'io.mockk:mockk:1.9.3'
-
-
+    testImplementation "junit:junit:4.13-beta-3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    testImplementation "io.mockk:mockk:1.9.3"
 }
