--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ allprojects {
     }
 
     ext {
+        androidx_version = '1.0.2'
+        constraintlayoutX_version = '1.1.3'
         nav_version = '2.1.0-alpha04'
         room_version = '2.1.0-rc01'
         lifecycle_version = '2.2.0-alpha01'
@@ -32,6 +34,11 @@ allprojects {
         kotlin_version = '1.3.31'
         okhttp_version = '4.0.0-alpha02'
         dagger_version = '2.17'
+        glideVersion = '4.9.0'
+        glidePaletteVersion = '2.1.2'
+        stethoVersion = '1.5.1'
+        timberVersion = '4.7.1'
+
 
     }
 }
